# lauzhack2023

./: .gitignore  .gitmodules  README.md
cv/logi-cv-toolbox/FacialLandmarkDetection/: main.cpp
devmon/samples/cpp/: CMakeLists.txt
devmon/samples/cpp/src/: CMakeLists.txt  devmon_test.cpp  test_runner.cpp
devmon/samples/csharp/: devmon-csharp.sln
devmon/samples/csharp/devmon-csharp/: LogiDevMon.cs  Program.cs  devmon-csharp.csproj  packages.config
devmon/samples/csharp/devmon-csharp/Properties/: AssemblyInfo.cs
devmon/samples/node/: index.js  package.json
devmon/samples/python/: devmon-api.py  logidevmon.py
devmon/samples/unity/Assets/: LogiDevMon.cs
devmon/samples/unity/Assets/Scenes/: SampleScene.unity
devmon/samples/unity/ProjectSettings/: ProjectSettings.asset
docs/: _config.yml  index.md
docs/cv/: index.md
docs/devmon/: index.md
docs/devmon/api/: controlids.md  index.md
docs/devmon/samples/: index.md
docs/devmon/samples/cpp/: index.md
docs/devmon/samples/csharp/: index.md
docs/devmon/samples/node/: index.md
docs/devmon/samples/python/: index.md
docs/devmon/samples/unity/: index.md
docs/devmon/samples/web/: index.md
docs/devmon/test/: index.html  main.css  main.css.map  main.js  main.js.map  manifest.json
docs/fastPose/: index.md
docs/options-plus/: features.cfg  index.md
